--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
                
                 <h3>See what's happening in the school right now!</h3>
-<h4>Join Twitter Kwitter Today!</h4>
+<h4>Join Twitter Kwitter Today🍫!</h4>
 <div class="form-group">
     <h5 id="h5">User Name :</h5>
     <input type="text" class="form-control" id="user_name" placeholder="                                                Enter User Name">
